@@ -581,14 +581,14 @@ class TestSelectionRDKit(object):
         assert sel.n_atoms == 2
 
     def test_passing_max_matches_to_converter(self, u2):
-        sel = u2.select_atoms("smarts C", smarts_kwargs=dict(maxMatches=2))
-        assert sel.n_atoms == 2
-        sel2 = u2.select_atoms("smarts c")
-        assert sel2.n_atoms == 4
-        with pytest.warns(UserWarning) as warnings:
-            u2.select_atoms("smarts C", smarts_kwargs=dict(maxMatches=2))
-            u2.select_atoms("smarts C", smarts_kwargs=dict(maxMatches=1000))
-            assert len(warnings) == 1
+        with pytest.warns(UserWarning, match="Your smarts-based") as wsmg:
+            sel = u2.select_atoms("smarts C", smarts_kwargs=dict(maxMatches=2))
+            sel2 = u2.select_atoms(
+                    "smarts C", smarts_kwargs=dict(maxMatches=1000))
+            assert sel.n_atoms == sel2.n_atoms == 2
+
+        sel3 = u2.select_atoms("smarts c")
+        assert sel3.n_atoms == 4
 
     def test_passing_use_chirality_to_converter(self):
         u = mda.Universe.from_smiles("CC[C@H](C)O")
